# slisko

./: .gitignore  INSTALL.md  README.md  _demo.go  draw.monopic  go.mod  go.sum  slisko.go
banger/: banger.py  striptest.py
cmd/clear/: clear.go
configurations/: 7609.toml  9010.toml
firmware/: .gitignore  Cargo.toml  INSTALL.md  README.md
firmware/slisko-core/: Cargo.toml
firmware/slisko-core/src/: chassi.rs  color.rs  controller.rs  faker.rs  lib.rs  output.rs  pattern.rs  pixel.rs  traffic.rs  utils.rs
firmware/slisko-core/src/patterns/: blinkstyle.rs  colorcycler.rs  globals.rs  linecards.rs  mapper.rs  mod.rs  panels.rs  static.rs  status.rs
firmware/slisko-fw/: Cargo.toml  README.md  build.rs  sdkconfig.defaults
firmware/slisko-fw/.cargo/: config.toml
firmware/slisko-fw/src/: apa102.rs  board.rs  buttons.rs  ddp.rs  generated_config.rs  http.rs  main.rs  net.rs  output.rs  time.rs
firmware/slisko-sim/: Cargo.toml
firmware/slisko-sim/src/: main.rs
patterns/: a9k40gel.go  a9k8tl.go  blink48ports.go  blinkports.go  blinkstyle.go  colorcycler.go  mapper.go  pattern.go  rsp440.go  snake.go  static.go  status.go  strobe.go  sup720.go  x6704.go
pkg/apa102/: apa102.go
pkg/api/: api.go
pkg/chassi/: 7609.go  9010.go  chassi.go  generators.go  linecard.go
pkg/configuration/: configuration.go  ledinfo_test.go
pkg/console/: console.go
pkg/controller/: broker.go  controller.go
pkg/faker/: blinker.go  faker.go  intervalblinker.go  randomblinker.go  randominterval.go  steppedblinker.go
pkg/gpio/: gpio.go
pkg/output/: output.go
pkg/output/apa102/: apa102.go
pkg/output/ddp/: ddp.go  ddp_test.go
pkg/output/null/: null.go
pkg/output/wledapa/: wledapa.go
pkg/pixel/: pixel.go
pkg/portlike/: portlike.go
pkg/socketapa/: socketapa.go
pkg/traffic/: shaper.go
pkg/utils/: math.go  time.go
rpi/: README.md  install.sh  slisko.service  uninstall.sh
simulator/: simulator.go
ui/: package-lock.json  package.json
ui/public/: index.html
ui/src/: App.vue  main.js
ui/src/components/: PatternList.vue  PatternToggle.vue
