[package]
name = "slisko-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Desktop simulator: runs slisko-core on the host and draws pixels at their
# baked X/Y positions. Same render logic as the firmware. A window backend
# (e.g. `minifb` / `pixels`) will be added with `cargo add` once the core
# renderer lands; for now it's a headless smoke runner.
[dependencies]
slisko-core = { path = "../slisko-core" }
